# prompti

./: .gitignore  pyproject.toml
examples/: aws_litellm_example.py  basic.py  basic_sync.py  basic_sync_mock.py  basic_sync_peu_fc.py  check_model.py  gemini_http_example.py  get_template_from_remote.py  hook_config_example.py  model_strategy_fallback_chain.py  openai_client_use.py  openai_response_example.py  sync_tool_call_example.py  template_format.py  tool_trace_example.py  variant_router_example.py
examples/configs/: models.yaml  settings.yaml
examples/configs/prompts/: multi_modal_analysis.yaml  simple_demo.yaml  support_reply.yaml  task_manager.yaml
src/prompti/: __init__.py  engine.py  logger.py  message.py  otel.py  replay.py  template.py  tool_trace.py  trace.py
src/prompti/hooks/: __init__.py  base.py  safety_classification_hook.py  wordlist_anonymization_hook.py
src/prompti/loader/: __init__.py  global_config_loader.py
src/prompti/model_client/: __init__.py  aws_litellm.py  azure_litellm.py  base.py  cloudway_openai_client.py  dummy_client.py  gemini_http_provider.py  gemini_litellm.py  image_utils.py  litellm.py  mock_provider.py  openai_client.py  openai_response.py  pseudo_function_calling_client.py  wanshi_openai_client.py
src/prompti/router/: __init__.py  conditional.py  sticky_helper.py
src/prompti/utils/: encryption.py
tests/: README.md  test_engine.py  test_experiment.py  test_replay.py  test_tracing.py  test_variant_routing_metrics.py
tests/hooks/: __init__.py  test_safety_classification_hook.py
tests/model_client/: test_config_loader.py  test_litellm_reasoning_extraction.py  test_litellm_thinking.py  test_openai_response.py
tests/router/: test_conditional.py  test_selector_pipeline.py
tests/template/: test_template_format.py  test_version_selector.py
tests/utils/: test_encryption.py
(+17 files in other folders)
